--- a/css/style.css
+++ b/css/style.css
@@ -1257,3 +1257,12 @@ footer .credits a {
     bottom: 15px;
   }
 }
+
+/* Art by Hansal Pravin Kachhara
+ _________________.---.______
+(_(______________(_o o_(____()
+        hpk  .___.'. .'.___.
+             \ o    Y    o /
+              \ \__   __/ /
+               '.__'-'__.'
+                   '''        (c) by Hansal 04.03.04 */
