--- a/css/style.css
+++ b/css/style.css
@@ -702,7 +702,7 @@ a:hover {
   padding: 2.5rem 1.3rem;
   border-radius: 1rem;
   margin-bottom: 3rem;
-  height: 40vh;
+  height: max-content;
 }
 
 .service-box:hover .ico-circle {
